# TransportDuct

./: .gitignore  CHANGELOG.md  Makefile  beet-dev.yaml  beet.yaml  common.yaml  pyproject.toml
.github/workflows/: release.yml
assets/minecraft/models/item/: furnace.json  glow_item_frame.json  jigsaw.json  warped_fungus_on_a_stick.json
assets/transportduct/models/block/item_cable/: wire_.json  wire_base.json  wire_d.json  wire_de.json  wire_dew.json  wire_dn.json  wire_dne.json  wire_dnew.json  wire_dns.json  wire_dnse.json  wire_dnsew.json  wire_dnsw.json  wire_dnw.json  wire_ds.json  wire_dse.json  wire_dsew.json  wire_dsw.json  wire_dw.json  wire_e.json  wire_ew.json  wire_n.json  wire_ne.json  wire_new.json  wire_ns.json  wire_nse.json  wire_nsew.json  wire_nsw.json  wire_nw.json  wire_s.json  wire_se.json  wire_sew.json  (+34 more)
assets/transportduct/models/item/: id_filter.json  wrench.json
data/template/functions/impl/: test_load.mcfunction
data/transportduct/advancements/: click_servo.json
data/transportduct/functions/impl/: 8tick.mcfunction  dirt_middle.mcfunction  load.mcfunction  moving_container.mcfunction  place_block.mcfunction  print_version.mcfunction  test_load.mcfunction  tick.mcfunction
data/transportduct/item_modifiers/: set_filter_lore_end.json  set_filter_lore_middle.json  set_filter_lore_start.json
data/transportduct/loot_tables/items/: id_filter.json  item_cable.json  servo_extract.json  servo_insert.json  wrench.json
data/transportduct/predicates/: holding_id_filter.json  holding_wrench.json  is_looking_me.json  test_block.json
(+31 files in other folders)
