[tool.poetry]
name = "transportduct"
version = "0.0.0"
description = "A datapack template"
authors = ["edayot <pro.e.dayot@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
smithed-libraries = {git = "https://github.com/edayot/Libraries.git", branch = "1.20.4"}
smithed= {git = "https://github.com/Smithed-MC/smithed-python.git", branch = "main"}
cryptography = "^41.0.0"
tqdm = "^4.66.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
major_on_zero = false
build_command = "python -m beet -p beet-release.yaml"
dist_path = "build"
upload_to_pypi = false
upload_to_release = true
version_toml = "pyproject.toml:tool.poetry.version"
version_pattern = "beet.yaml:(?<=version: \")(\\d+\\.\\d+\\.\\d+)"
version_source = "commit"
remove_dist = false